raffia/tests/error/scss/at-rule/use/with-no-arguments.snap
---
source: raffia/tests/error.rs
---
error: expect token `(`, but found `;`
  ┌─ with-no-arguments.scss:1:18
  │
1 │ @use "other" with;
  │                  ^


